--- a/proyecto/views/registro.html
+++ b/proyecto/views/registro.html
@@ -3,7 +3,130 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>SingIn/Registro</title>
   </head>
-  <body></body>
+  <body>
+    <div class="containner">
+      <header>
+        <div class="banner-superior">
+          <p>ENVIO GRATIS EN CABA Y ALREDEDORES</p>
+          <p>5% OFF PAGANDO EN EFECTIVO</p>
+        </div>
+        <div class="menu-headder">
+          <i class="fas fa-bars"></i>
+          <i class="fas fa-shopping-cart"></i>
+          <img
+            src="/img/img-logo-petShop.svg"
+            alt="Logo PetShop"
+            class="img-logo"
+          />
+          
+        </div>
+        <div class="buscador-headder">
+          <input type="text" placeholder="Que estas buscando" />
+          <i class="fas fa-search"></i>
+        </div>
+      </header>
+      <main class="formulario- registro">
+        <div>
+          <p class="titulo">Crear Cuenta</p>
+        </div>
+        <div class="formulario">
+          <form action="/my-handeling-from-page" method="post">
+            <ul>
+              <li>
+                <label for="name">Nombre</label>
+                <input type="text" id="name" name="user_name" />
+              </li>
+              <li>
+                <label for="mail">Email</label>
+                <input type="email" id="mail" name="user_mail" />
+              </li>
+              <li>
+                <label for="tel">Telefono</label>
+                <input type="phone" id="phone" name="user_phome" />
+              </li>
+              <li>
+                <label for="pass">Contrasena</label>
+                <input type="password" id="password" name="user_password" />
+              </li>
+              <li>
+                <label for="pass">Contrasena</label>
+                <input type="password" id="password2" name="user_password2" />
+              </li>
+            </ul>
+          </form>
+        </div>
+
+        <div class="crear-cuenta">
+          <button name="boton" type="button">Crear cuenta</button>
+        </div>
+        <div class="inicio-sesion">
+          <p>Ya tenes cuenta? <a href="#">Iniciar Sesion</a></p>
+        </div>
+      </main>
+      <footer class="footer">
+
+        <section class="categorias-footer">
+          
+          <h2>Categorias</h2>
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#">Gatos</a></li>
+            <li class="nav-item"><a href="#">Perros</a></li>
+            <li class="nav-item"><a href="#">Accesorios</a></li>
+            
+          </ul>
+  
+        </section>
+  
+        <section class="medios-de-pago">
+          <h2>Medios De Pago</h2>
+          <ul class="nav-list">
+            <li><a href="#">Visa</a></li>
+            <li><a href="#">Mastercard</a></li>
+            <li><a href="#">MercadoPago</a></li>
+            
+          </ul>
+  
+        </section>
+  
+        <section class="contacto">
+          <h2>Contacto</h2>
+          <p><i class="fas fa-phone-alt"></i>0800-000-0000</i></p>
+          <p><i class="far fa-envelope"></i>petshop@gmail.com</p>
+          <p><i class="fas fa-map-marked-alt"></i>Calle Falsa 123 - CABA</p>
+        </section>
+  
+        <section class="mail-imput">
+  
+          <input type="text" placeholder="Dejanos Tu email">
+  
+        </section>
+  
+        <section class="redes-sociales">
+          <button>
+             <i class="fab fa-instagram"></i>
+            </button>
+         <button> 
+             <i class="fab fa-facebook"></i>
+            </button>
+  
+        </section>
+  
+  
+      </footer>
+
+
+    </div>
+  </body>
 </html>
