--- a/proyecto/views/carrito.html
+++ b/proyecto/views/carrito.html
@@ -1,11 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PetShop</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
+
 <body>
-    
+    <div class="container">
+
+        <header>
+            <div class="banner-superior">
+                <p>ENVIO GRATIS EN CABA Y ALREDEDORES</p>
+                <p>5% OFF PAGANDO EN EFECTIVO</p>
+            </div>
+            <div class="menu-headder">
+                <i class="fas fa-bars"></i>
+                <i class="fas fa-shopping-cart"></i>
+                <img src="/img/img-logo-petShop.svg" alt="Logo PetShop" class="img-logo" />
+
+            </div>
+            <div class="buscador-headder">
+                <input type="text" placeholder="Que estas buscando" />
+                <i class="fas fa-search"></i>
+            </div>
+        </header>
+
+        <main class="main-carrito">
+            <div class="titulo-carrito">MI CARRITO</div>
+            <div class="lista-carrito">
+
+
+                <article class="itme-carrito">
+                    <div class="imagen-item-carrito">
+                        <img src="./img/img-alimento-gato-exigent.jpg" alt="producto-en-carrito">
+                    </div>
+                    <div class="descripcion-item-carrito">
+                        <p>Royal Canun Gatos Exigente - 15Kg</p>
+                    </div>
+                    <div class="eliminar-item-carrito"><i class="fas fa-trash-alt"></i></div>
+                    <div class="sumar-restar-items-carrito">
+                        <p>+</p>
+                        <p>1</p>
+                        <p>-</p>
+
+                    </div>
+                    <div class="precio-item-carrito">$1175</div>
+
+
+                </article>
+
+                <article class="itme-carrito">
+                    <div class="imagen-item-carrito">
+                        <img src="./img/img-alimento-gato-exigent.jpg" alt="producto-en-carrito">
+                    </div>
+                    <div class="descripcion-item-carrito">
+                        <p>Royal Canun Perros Exigente - 15Kg</p>
+                    </div>
+                    <div class="eliminar-item-carrito"><i class="fas fa-trash-alt"></i></div>
+                    <div class="sumar-restar-items-carrito">
+                        <p>+</p>
+                        <p>1</p>
+                        <p>-</p>
+
+                    </div>
+                    <div class="precio-item-carrito">$1175</div>
+
+
+                </article>
+
+        </div>
+
+        <section class="sumatoria">
+
+            <div class="subtotal">
+                <p class="subtotal-titulo">SUBTOTAL</p> 
+                <p class="subtotal-precio"> $1175</p>
+
+            </div>
+
+            <div class="total">
+                <p class="total-titulo">TOTAL:</p>
+                <p class="total-precio">$2350</p>
+
+            </div>
+
+            <div class="pagar">
+                <button>INICIAR PAGO</button>
+                <p>Seguir Comprando</p>
+            </div>
+        </section>
+
+
+
+
+
+
+
+        </main>
+
+
+
+
+        <footer class="footer">
+
+            <section class="categorias-footer">
+
+                <h2>Categorias</h2>
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#">Gatos</a></li>
+                    <li class="nav-item"><a href="#">Perros</a></li>
+                    <li class="nav-item"><a href="#">Accesorios</a></li>
+
+                </ul>
+
+            </section>
+
+            <section class="medios-de-pago">
+                <h2>Medios De Pago</h2>
+                <ul class="nav-list">
+                    <li><a href="#">Visa</a></li>
+                    <li><a href="#">Mastercard</a></li>
+                    <li><a href="#">MercadoPago</a></li>
+
+                </ul>
+
+            </section>
+
+            <section class="contacto">
+                <h2>Contacto</h2>
+                <p><i class="fas fa-phone-alt"></i> 0800-000-0000</i></p>
+                <p><i class="far fa-envelope"></i> petshop@gmail.com</p>
+                <p><i class="fas fa-map-marked-alt"></i> Calle Falsa 123 - CABA</p>
+            </section>
+
+            <section class="mail-imput">
+
+                <input type="text" placeholder="Dejanos Tu email">
+
+            </section>
+
+            <section class="redes-sociales">
+                <button>
+                    <i class="fab fa-instagram"></i>
+                </button>
+                <button>
+                    <i class="fab fa-facebook"></i>
+                </button>
+
+            </section>
+
+
+        </footer>
+
+
 </body>
+
+</div>
+
+
+
 </html>
