--- a/proyecto/views/login.html
+++ b/proyecto/views/login.html
@@ -3,113 +3,110 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LogIn</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
-
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>.: PetShop - login :.</title>
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"/>
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
+
   <body>
-    <div class="container">
-      <header>
-        <div class="banner-superior">
-          <p>ENVIO GRATIS EN CABA Y ALREDEDORES</p>
-          <p>5% OFF PAGANDO EN EFECTIVO</p>
-        </div>
-        <div class="menu-headder">
-          <i class="fas fa-bars"></i>
-          <i class="fas fa-shopping-cart"></i>
-          <img
-            src="/img/img-logo-petShop.svg"
-            alt="Logo PetShop"
-            class="img-logo"
-          />
-          
-        </div>
-        <div class="buscador-headder">
-          <input type="text" placeholder="Que estas buscando" />
-          <i class="fas fa-search"></i>
-        </div>
-      </header>
-
-    <main>
-      <h2>Iniciar Sesion</h2>
-
-      <section class="email">
-        <p>Email</p>
-        <input type="text" placeholder="Ingrese su email" />
-      </section>
-
-      <section class="pass">
-        <p>Contraseña</p>
-        <input type="text" placeholder="Ingrese su contraseña" /> <i class="fas fa-eye-slash"></i>
-      </section>
-      <div class="olvidar-contrasena">
-        <a href="#"><p>Olvidaste tu contraseña?</p></a>
+    <header class="">
+      <div class="promo-header center">
+        <p>ENVIO GRATIS EN CABA Y ALREDEDORES<br><strong>5% OFF PAGANDO EN EFECTIVO</strong></p>
       </div>
 
-      <div class="boton-inicio-sesion">
-        <button>INICIAR SESION</button>
+      <div class="container-fluid pb-3">
+        <section class="nav-bar no-gutters">
+          <!-- <nav class="nav-menu">
+            <ul>
+              <li><a href="#">Gatos</a></li>
+              <li><a href="#">Perros</a></li>
+              <li><a href="#">Accesorios</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+          </nav> -->
+          <div class="menu-bars d-block text-left">
+            <i class="fas fa-bars"></i>
+          </div>
+          <div class="logo text-center">
+            <a href="/"><img src="/img/img-logo-petShop.svg" alt="Logo PetShop" class="img-logo" /></a>
+          </div>
+          <div class="shopping-cart text-right">
+            <i class="fas fa-shopping-cart"></i>
+          </div>
+        </section>
+        <section class="search-input-box form-group order-last center">
+            <input class="search-input form-control" type="text" placeholder="Qué estás buscando?">
+            <button class="btn search-input-submit" type="submit"><i class="fa fa-search"></i></button>
+        </section>
       </div>
+    </header>
 
-      <div class="crear-cuenta">
-        
-        <p>No tenes cuenta aun? <a href="#">Crear cuenta</a></p> </div>
+    <main class="login">
+
+      <div class="tit-section"><h2>Iniciar Sesión</h2></div>
+
+        <section class="login-register">
+            <div class="form-login-register">
+              <div class="form-group my-2">
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control" type="email" id="email" name="email" placeholder="" required>
+              </div>
+
+              <div class="form-group my-2">
+                <label class="form-label" for="password">Contraseña</label>
+                <input class="form-control" type="password" id="password" name="password" placeholder="" required>
+                <span><a href="#">¿Olvidaste tu contraseña?</a></span>
+              </div>
+
+              <input class="btn btn-primary btn-block mt-2" type="submit" value="Iniciar Sesión" name="">
+              <span>¿No tenés cuenta aún? <a href="#">Crear cuenta</a></span>
+            </div>
+        </section>
     </main>
 
-
-    <footer class="footer">
-
+    <footer>
       <section class="categorias-footer">
-        
-        <h2>Categorias</h2>
-        <ul class="nav-list">
-          <li class="nav-item"><a href="#">Gatos</a></li>
-          <li class="nav-item"><a href="#">Perros</a></li>
-          <li class="nav-item"><a href="#">Accesorios</a></li>
-          
+        <h4>Categorias</h4>
+        <ul>
+          <li><a href="#">Gatos</a></li>
+          <li><a href="#">Perros</a></li>
+          <li><a href="#">Accesorios</a></li>
         </ul>
-
       </section>
 
       <section class="medios-de-pago">
-        <h2>Medios De Pago</h2>
-        <ul class="nav-list">
+        <h4>Medios De Pago</h4>
+        <ul>
           <li><a href="#">Visa</a></li>
           <li><a href="#">Mastercard</a></li>
           <li><a href="#">MercadoPago</a></li>
-          
         </ul>
-
       </section>
 
       <section class="contacto">
-        <h2>Contacto</h2>
-        <p><i class="fas fa-phone-alt"></i>0800-000-0000</i></p>
-        <p><i class="far fa-envelope"></i>petshop@gmail.com</p>
-        <p><i class="fas fa-map-marked-alt"></i>Calle Falsa 123 - CABA</p>
+        <h4>Contacto</h4>
+        <p><i class="fas fa-phone-alt mr-1"></i>0800-000-0000</i></p>
+        <p><i class="far fa-envelope mr-1"></i>petshop@gmail.com</p>
+        <p><i class="fas fa-map-marker-alt mr-1"></i>Calle Falsa 123 - CABA</p>
       </section>
 
-      <section class="mail-imput">
-
-        <input type="text" placeholder="Dejanos Tu email">
-
+      <section class="mail-input form-group">
+        <input class="search-input form-control" type="text" placeholder="Dejanos Tu email">
       </section>
 
-      <section class="redes-sociales">
-        <button>
-           <i class="fab fa-instagram"></i>
-          </button>
-       <button> 
-           <i class="fab fa-facebook"></i>
-          </button>
-
+      <section class="redes-sociales center">
+          <a class="social-icon-rounded" href="#">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <a class="social-icon-rounded" href="#"> 
+            <i class="fab fa-facebook-f"></i>
+          </a>
       </section>
 
 
     </footer>
-  </div>
   </body>
 </html>
