--- a/proyecto/views/registro.html
+++ b/proyecto/views/registro.html
@@ -3,130 +3,124 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
-
-    <title>SingIn/Registro</title>
+    <title>.: PetShop - login :.</title>
+   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"/>
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
+
   <body>
-    <div class="containner">
-      <header>
-        <div class="banner-superior">
-          <p>ENVIO GRATIS EN CABA Y ALREDEDORES</p>
-          <p>5% OFF PAGANDO EN EFECTIVO</p>
-        </div>
-        <div class="menu-headder">
-          <i class="fas fa-bars"></i>
-          <i class="fas fa-shopping-cart"></i>
-          <img
-            src="/img/img-logo-petShop.svg"
-            alt="Logo PetShop"
-            class="img-logo"
-          />
-          
-        </div>
-        <div class="buscador-headder">
-          <input type="text" placeholder="Que estas buscando" />
-          <i class="fas fa-search"></i>
-        </div>
-      </header>
-      <main class="formulario- registro">
-        <div>
-          <p class="titulo">Crear Cuenta</p>
-        </div>
-        <div class="formulario">
-          <form action="/my-handeling-from-page" method="post">
+    <header class="">
+      <div class="promo-header center">
+        <p>ENVIO GRATIS EN CABA Y ALREDEDORES<br><strong>5% OFF PAGANDO EN EFECTIVO</strong></p>
+      </div>
+
+      <div class="container-fluid pb-3">
+        <section class="nav-bar no-gutters">
+          <!-- <nav class="nav-menu">
             <ul>
-              <li>
-                <label for="name">Nombre</label>
-                <input type="text" id="name" name="user_name" />
-              </li>
-              <li>
-                <label for="mail">Email</label>
-                <input type="email" id="mail" name="user_mail" />
-              </li>
-              <li>
-                <label for="tel">Telefono</label>
-                <input type="phone" id="phone" name="user_phome" />
-              </li>
-              <li>
-                <label for="pass">Contrasena</label>
-                <input type="password" id="password" name="user_password" />
-              </li>
-              <li>
-                <label for="pass">Contrasena</label>
-                <input type="password" id="password2" name="user_password2" />
-              </li>
+              <li><a href="#">Gatos</a></li>
+              <li><a href="#">Perros</a></li>
+              <li><a href="#">Accesorios</a></li>
+              <li><a href="#">Contacto</a></li>
             </ul>
-          </form>
-        </div>
+          </nav> -->
+          <div class="menu-bars d-block text-left">
+            <i class="fas fa-bars"></i>
+          </div>
+          <div class="logo text-center">
+            <a href="/"><img src="/img/img-logo-petShop.svg" alt="Logo PetShop" class="img-logo" /></a>
+          </div>
+          <div class="shopping-cart text-right">
+            <i class="fas fa-shopping-cart"></i>
+          </div>
+        </section>
+        <section class="search-input-box form-group order-last center">
+            <input class="search-input form-control" type="text" placeholder="Qué estás buscando?">
+            <button class="btn search-input-submit" type="submit"><i class="fa fa-search"></i></button>
+        </section>
+      </div>
+    </header>
 
-        <div class="crear-cuenta">
-          <button name="boton" type="button">Crear cuenta</button>
-        </div>
-        <div class="inicio-sesion">
-          <p>Ya tenes cuenta? <a href="#">Iniciar Sesion</a></p>
-        </div>
-      </main>
-      <footer class="footer">
+    <main class="login">
 
-        <section class="categorias-footer">
-          
-          <h2>Categorias</h2>
-          <ul class="nav-list">
-            <li class="nav-item"><a href="#">Gatos</a></li>
-            <li class="nav-item"><a href="#">Perros</a></li>
-            <li class="nav-item"><a href="#">Accesorios</a></li>
-            
-          </ul>
-  
+      <div class="tit-section"><h2>Crear Cuenta</h2></div>
+
+        <section class="login-register">
+            <div class="form-login-register">
+              <div class="form-group my-2">
+                <label class="form-label" for="email">Nombre y Apellido</label>
+                <input class="form-control" type="name" id="name" name="name" placeholder="" required>
+              </div>
+
+              <div class="form-group my-2">
+                <label class="form-label" for="email">Email</label>
+                <input class="form-control" type="email" id="email" name="email" placeholder="" required>
+              </div>
+
+              <div class="form-group my-2">
+                <label class="form-label" for="phone">Teléfono</label>
+                <input class="form-control" type="number" id="phone" name="phone" placeholder="" required>
+              </div>
+
+              <div class="form-group my-2">
+                <label class="form-label" for="password">Contraseña</label>
+                <input class="form-control" type="password" id="password" name="password" placeholder="" required>
+              </div>
+
+              <div class="form-group my-2">
+                <label class="form-label" for="confirmpassword">Confirmar contraseña</label>
+                <input class="form-control" type="password" id="confirmpassword" name="confirmpassword" placeholder="" required>
+              </div>
+
+              <input class="btn btn-primary btn-block mt-2" type="submit" value="Crear cuenta" name="">
+              <span>¿Ya tenés una cuenta? <a href="#">Iniciá sesión</a></span>
+            </div>
         </section>
-  
-        <section class="medios-de-pago">
-          <h2>Medios De Pago</h2>
-          <ul class="nav-list">
-            <li><a href="#">Visa</a></li>
-            <li><a href="#">Mastercard</a></li>
-            <li><a href="#">MercadoPago</a></li>
-            
-          </ul>
-  
-        </section>
-  
-        <section class="contacto">
-          <h2>Contacto</h2>
-          <p><i class="fas fa-phone-alt"></i>0800-000-0000</i></p>
-          <p><i class="far fa-envelope"></i>petshop@gmail.com</p>
-          <p><i class="fas fa-map-marked-alt"></i>Calle Falsa 123 - CABA</p>
-        </section>
-  
-        <section class="mail-imput">
-  
-          <input type="text" placeholder="Dejanos Tu email">
-  
-        </section>
-  
-        <section class="redes-sociales">
-          <button>
-             <i class="fab fa-instagram"></i>
-            </button>
-         <button> 
-             <i class="fab fa-facebook"></i>
-            </button>
-  
-        </section>
-  
-  
-      </footer>
+    </main>
+
+    <footer>
+      <section class="categorias-footer">
+        <h4>Categorias</h4>
+        <ul>
+          <li><a href="#">Gatos</a></li>
+          <li><a href="#">Perros</a></li>
+          <li><a href="#">Accesorios</a></li>
+        </ul>
+      </section>
+
+      <section class="medios-de-pago">
+        <h4>Medios De Pago</h4>
+        <ul>
+          <li><a href="#">Visa</a></li>
+          <li><a href="#">Mastercard</a></li>
+          <li><a href="#">MercadoPago</a></li>
+        </ul>
+      </section>
+
+      <section class="contacto">
+        <h4>Contacto</h4>
+        <p><i class="fas fa-phone-alt mr-1"></i>0800-000-0000</i></p>
+        <p><i class="far fa-envelope mr-1"></i>petshop@gmail.com</p>
+        <p><i class="fas fa-map-marker-alt mr-1"></i>Calle Falsa 123 - CABA</p>
+      </section>
+
+      <section class="mail-input form-group">
+        <input class="search-input form-control" type="text" placeholder="Dejanos Tu email">
+      </section>
+
+      <section class="redes-sociales center">
+          <a class="social-icon-rounded" href="#">
+              <i class="fab fa-instagram"></i>
+          </a>
+          <a class="social-icon-rounded" href="#"> 
+            <i class="fab fa-facebook-f"></i>
+          </a>
+      </section>
 
 
-    </div>
+    </footer>
   </body>
 </html>
